@@ -2,12 +2,12 @@ package gg.projecteden.nexus.models.godmode;
 
 import dev.morphia.annotations.Entity;
 import dev.morphia.annotations.Id;
-import gg.projecteden.nexus.models.PlayerOwnedObject;
+import gg.projecteden.nexus.framework.interfaces.PlayerOwnedObject;
 import gg.projecteden.nexus.models.bearfair21.BearFair21ConfigService;
 import gg.projecteden.nexus.models.nerd.Nerd;
 import gg.projecteden.nexus.models.nerd.Rank;
 import gg.projecteden.nexus.utils.PlayerUtils;
-import gg.projecteden.nexus.utils.WorldGroup;
+import gg.projecteden.nexus.utils.worldgroup.WorldGroup;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.Getter;
@@ -16,8 +16,6 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.bukkit.entity.Player;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -35,10 +33,7 @@ public class Godmode implements PlayerOwnedObject {
 	private boolean enabled = false;
 
 	@Getter
-	private static final List<String> disabledWorlds = new ArrayList<>(Arrays.asList("gameworld", "deathswap")) {{
-		addAll(WorldGroup.SKYBLOCK.getWorldNames());
-		addAll(WorldGroup.ONEBLOCK.getWorldNames());
-	}};
+	private static final List<WorldGroup> disabledWorlds = List.of(WorldGroup.MINIGAMES, WorldGroup.SKYBLOCK);
 
 	public boolean isActive() {
 		if (!isOnline())
@@ -46,12 +41,13 @@ public class Godmode implements PlayerOwnedObject {
 
 		final Player player = getOnlinePlayer();
 		if (!Nerd.of(this).hasMoved())
-			return true;
-		if (player.getWorld().getName().equals("bearfair21") && new BearFair21ConfigService().get0().isEnabled(WARP) && !PlayerUtils.isVanished(player))
+			if (player.getLocation().getY() >= -300) // If they logged out & back in while falling into the void, don't save them
+				return true;
+		if ("bearfair21".equals(player.getWorld().getName()) && new BearFair21ConfigService().get0().isEnabled(WARP) && !PlayerUtils.isVanished(player))
 			return false;
 		if (!Rank.of(player).isStaff())
 			return false;
-		if (disabledWorlds.contains(player.getWorld().getName()))
+		if (disabledWorlds.contains(WorldGroup.of(player)))
 			return false;
 
 		return enabled;
